--- a/src/AdminFoundItemDetails.html
+++ b/src/AdminFoundItemDetails.html
@@ -65,6 +65,14 @@
             <i class="fas fa-arrow-left mr-2"></i> Back to Found Items
         </a>
 
+        <!-- Database ID Display -->
+        <div class="flex items-center gap-2 mb-6">
+            <span class="text-xs text-gray-400 uppercase font-semibold">Found Item ID:</span>
+            <span
+                class="font-mono text-sm bg-gray-100 dark:bg-gray-700 px-3 py-1 rounded text-gray-600 dark:text-gray-300"
+                id="databaseId">Loading...</span>
+        </div>
+
         <div class="space-y-6">
 
             <!-- Main Card -->
